@@ -1,7 +1,6 @@
-# http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Net-BEEP-Lite
-version:      0.02
+version:      0.03
 version_from: lib/Net/BEEP/Lite.pm
 installdirs:  site
 requires:
@@ -11,4 +10,4 @@ requires:
     XML::LibXML:                   1.5
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.16
+generated_by: ExtUtils::MakeMaker version 6.13
